// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Ammount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
       
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Ammount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      ammount={10}
      createAt={0}
      description="GUM"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      ammount={1000}
      createAt={-345600000}
      description="RENT"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      ammount={500}
      createAt={345600000}
      description="CREDIT CARD"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
